syntax = "proto3";

package happendb.store.v1;

import "happendb/messaging/v1/event.proto";

option go_package = "github.com/happendb/happendb/proto/gen/go/happendb/store/v1";

service WriteOnlyService { rpc Append(AppendRequest) returns (AppendResponse); }

message AppendRequest {
  string stream_name = 1;
  repeated happendb.messaging.v1.Event events = 2;
}

message AppendResponse {  }
